Initial Version with pure Log4J2